--- a/streetView/static/css.css
+++ b/streetView/static/css.css
@@ -148,3 +148,34 @@ html, body {
   font-size: 30px;
 }
 
+.panel {
+  padding: 5px;
+  text-align: center;
+  background-color: #7c7c7c8f;
+  border-color: #424542;
+  border-radius: 4px 4px 4px 4px;
+  border-style: solid;
+  border-width: px 0 0;
+  padding: 200px;
+  display: none;
+}
+/* 
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  padding: 12px 16px;
+  transform: translate(0%, -50%);
+} */
+
+.close{
+  position: absolute;
+  float: right;
+  font-size: 50px;
+  top: 300px;
+  right: 245px;
+  cursor: pointer;
+  padding: 12px 16px;
+  transform: translate(0%, -50%);
+}
