--- a/templates/start.html
+++ b/templates/start.html
@@ -1,36 +1,97 @@
-{% load staticfiles %}
-<!DOCTYPE html>
+ {% load staticfiles %}
+ 
+ <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="{% static 'css.css' %}" type="text/css">
-<script src="{% static 'jquery.js' %}"></script>
-<script>
-        {% comment %} $('').click(enter_link('start') { 
-        $(this).parent().fadeOut(500);
-        $({display:none;}
-         });
-         $( '' ).click(function() {
-             $(set_loc(56.9566131, 24.108597);); {% endcomment %}
-       
-</script>
-</head>
-<body>
-   {% comment %} <div class="topnav">
-      <a class="active" >RIGA STREET GUESSER</a>
-    </div> {% endcomment %}
+  <head>
+    <meta charset="utf-8">
+    <title>Street View Containers</title>
+    
+    <link rel="stylesheet" href="{% static 'css.css' %}" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script async defer
+         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjurs7Df81BxOig4ZYOd-FiUtNeIpZiR4&callback=initialize">
 
-    {% comment %} <a href="/" id=sb class="butt">Start</a> {% endcomment %}
+
+
+    </script>   
+
+
+  </head>
+
+ 
+
+  <body background: color( #f2f2f2)>
+
+<div class="header" id="header" style="position: absolute; width: 100%; height: 100%; background-color: green; z-index: 2000;">
+            <h1 href="/" style="
+          color: white;
+      ">Time Trial</h1>
+
+
+          <button role="button" class="button" onclick="countdown()"  style="color: white;">Start</button>
+      <p style="color:white; font-size:larger; background-color: #775b2ab3; padding: 10px;";>The goal is to guess as many street names as possible in 2 minutes</p>
 </div>
- <header class="header" id="header">
-    <h1 href="/" style="
-    color: white;
-">Riga Street Guesser</h1>
 
 
-    <button role="button" class=button onclick="hideStart()" style="
-    color: white;
-">Are you ready for a chalange?</button>
-</header>
+<div  class="header" id="start"  style="position: absolute; width: 100%; height: 100%; background-color: green; z-index: 2000; color: white;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    display: none;">
+<h1 href="/" style="color: white; position: absolute;">Game starts in <span id="time">3</span></h1>
+</div>
 
-</body>
+<div  id="myDIV" class="mystyle" style="position: absolute; width: 100%; height: 100%; z-index: 2002220;">
+            <h1 href="/" style="
+          color: white;
+      ">SUCCESS
+      </h1>
+      
+
+
+          <button role="button" class=button onclick="ress()" style="
+          color: white;
+      ">PLAY AGAIN</button>
+</div>
+
+<div  id="myDIV1" class="mystyle" style="position: absolute; width: 100%; height: 100%; z-index: 2002220;">
+            <h1 href="/" style="
+          color: white;
+      ">WRONG
+     
+      </h1>
+
+
+          <button role="button" class=button onclick="ress1()" style="
+          color: white;
+      ">PLAY AGAIN</button>
+</div>
+
+    <script src="{% static 'jquery.js' %}"></script>
+    <div class="topnav">
+      <a class="active" href='/' >RIGA STREET GUESSER</a>
+    </div>
+    <div id="street-view"></div>
+    
+    <div class="child">
+    <div style="color:white; ">
+    <h1 class="point_count">POINTS: 0    Time: <span id="gametimer">02:00</span></h1>
+    </div>
+    <div>
+    <input type="button" class="button" id="1" onclick="time_check_answer(1)" value="" >   <input type="button" class="button" id="2" onclick="time_check_answer(2)" value="">   
+    </div>
+    
+
+
+    <div>
+    <input type="button" class="button" id="3" onclick="time_check_answer(3)" value="">   <input type="button" class="button" id="4"  onclick="time_check_answer(4)" value="">   
+    </div>
+    </div>
+
+    
+
+     
+  </body>
 </html>
