--- a/templates/test.html
+++ b/templates/test.html
@@ -12,7 +12,37 @@
     <script async defer
          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjurs7Df81BxOig4ZYOd-FiUtNeIpZiR4&callback=initialize">
     </script>   
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+    $(document).ready(function(){
+  $("#flip").click(function(){
+    $("#panel").slideToggle("slow");
+  });
+});
+    </script>
 
+<style> 
+#panel {
+  text-align: center;
+  display: none;
+  background-color: #7c7c7c8f;
+  border: none;
+  color: white;
+  {% comment %} padding: 200px 200px; {% endcomment %}
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-color: #424542;
+  border-radius: 4px 4px 4px 4px;
+  border-style: solid;
+  border-width: px 0 0;
+  background-image: url(http://i.redd.it/p2tpvg00dke31.jpg);
+  width: 400px;
+  height: 400px;
+  background-repeat: no-repeat;
+  background-size: contain;
+</style>
 
   </head>
 
@@ -21,14 +51,18 @@
   <body background: color( #f2f2f2)>
 
 <div class="header" id="header" style="position: absolute; width: 100%; height: 100%; background-color: green; z-index: 2000;">
-            <h1 href="/" style="
-          color: white;
-      ">Riga Street Guesser</h1>
+            
+      <h1 href="/" style="color: white;">Riga Street Guesser</h1>
 
+      <button role="button" class=button onclick="hideStart()"  style="color: white;">Are you ready for a challenge?</button>
 
-          <button role="button" class=button onclick="hideStart()" style="
-          color: white;
-      ">Are you ready for a challenge?</button>
+      <button role="button" class=button href='/timet' style="color: white;">Time Chalange</button>
+
+      <button class="button" id="flip" style="color: white;">Click Me!</button>
+      <div id="panel">
+      {% comment %} <img scr="http://i.redd.it/p2tpvg00dke31.jpg" alt="meme" style="width: 100%; height: auto;""> {% endcomment %}
+      <p style="z-index: 400; margin-top: 250px; color: white;">Bats are mammals of the order Chiroptera; with their forelimbs adapted as wings, they are the only
+				mammals naturally capable of true and sustained flight. </p></div>
 </div>
 
 <div  id="myDIV" class="mystyle" style="position: absolute; width: 100%; height: 100%; z-index: 2002220;">
@@ -59,7 +93,7 @@
 
     <script src="{% static 'jquery.js' %}"></script>
     <div class="topnav">
-      <a class="active" >RIGA STREET GUESSER</a>
+      <a class="active" href='/' >RIGA STREET GUESSER</a>
     </div>
     <div id="street-view"></div>
     
