--- a/streetView/streetView/streetView-update/templates/start.html
+++ b/streetView/streetView/streetView-update/templates/start.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script async defer
-         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjurs7Df81BxOig4ZYOd-FiUtNeIpZiR4&callback=initialize">
+         src="https://maps.googleapis.com/maps/api/js?key=-FiUtNeIpZiR4&callback=initialize">
 
 
 
